--- a/style.css
+++ b/style.css
@@ -4,3 +4,36 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    height: 100vh;
+    body: 100vw;
+
+    background: linear-gradient(120deg, #20242e, #21222c);
+}
+
+.board {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+
+    justify-content: center;
+    align-content: center;
+
+    width: 100%;
+    height: 100%;
+}
+
+.cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 6.25rem;
+    height: 6.25rem;
+
+    border: 2px solid #484d5a;
+}
+
+.winning-message {
+    display: none;
+}
