removing excessive border

--- a/style.css
+++ b/style.css
@@ -34,6 +34,30 @@ body {
     border: 2px solid #484d5a;
 }
 
+/* removing top border */
+.cell:nth-child(1),
+.cell:nth-child(2),
+.cell:nth-child(3)
+{  border-top: 0; }
+
+/* removing left border */
+.cell:nth-child(1),
+.cell:nth-child(4),
+.cell:nth-child(7)
+{  border-left: 0; }
+
+/* removing right border */
+.cell:nth-child(3),
+.cell:nth-child(6),
+.cell:nth-child(9)
+{  border-right: 0; }
+
+/* removing bottom border */
+.cell:nth-child(7),
+.cell:nth-child(8),
+.cell:nth-child(9)
+{  border-bottom: 0; }
+
 .winning-message {
     display: none;
 }
