--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body {
     justify-content: center;
     align-items: center;
 
+    position: relative;
+
     width: 6.25rem;
     height: 6.25rem;
 
@@ -57,6 +59,35 @@ body {
 .cell:nth-child(8),
 .cell:nth-child(9)
 {  border-bottom: 0; }
+
+/* x icon */
+.cell.x::before,
+.cell.x::after {
+    content: '';
+    height: calc(6.25rem * 0.13); /* 15% of cell size */
+    width: calc(6.25rem * 0.6); /* 60% of cell size */
+    border-radius: 10px;
+
+    position: absolute;
+
+    background-color: #484d5a;
+}
+
+.cell.x::before { transform: rotate(45deg); }
+.cell.x::after { transform: rotate(-45deg); }
+
+/* circle icon */
+.cell.circle::before,
+.cell.circle::after {
+    content: '';
+    height: calc(6.25rem * 0.6); /* 15% of cell size */
+    width: calc(6.25rem * 0.6); /* 60% of cell size */
+    border-radius: 50%;
+
+    position: absolute;
+
+    background-color: #484d5a;
+}
 
 .winning-message {
     display: none;
