--- a/style.css
+++ b/style.css
@@ -36,6 +36,11 @@ body {
     border: 2px solid #484d5a;
 }
 
+.cell.x,
+.cell.circle {
+    cursor: not-allowed;
+}
+
 /* removing top border */
 .cell:nth-child(1),
 .cell:nth-child(2),
@@ -62,7 +67,9 @@ body {
 
 /* x icon */
 .cell.x::before,
-.cell.x::after {
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover:before,
+.board.x .cell:not(.x):not(.circle):hover:after {
     content: '';
     height: calc(6.25rem * 0.13); /* 15% of cell size */
     width: calc(6.25rem * 0.6); /* 60% of cell size */
@@ -73,8 +80,10 @@ body {
     background-color: #484d5a;
 }
 
-.cell.x::before { transform: rotate(45deg); }
-.cell.x::after { transform: rotate(-45deg); }
+.cell.x::before, .board.x .cell:not(.x):not(.circle):hover:before 
+{ transform: rotate(45deg); }
+.cell.x::after, .board.x .cell:not(.x):not(.circle):hover:after 
+{ transform: rotate(-45deg); }
 
 /* circle icon */
 .cell.circle::before,
