player marker and swap turn

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body {
 
 /* winning message */
 .winning-message {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     flex-direction: column;
